--- a/src/components/front/algorithm/pages/elem-task2019.html
+++ b/src/components/front/algorithm/pages/elem-task2019.html
@@ -52,7 +52,7 @@
 
   if (i === 0) return weights[0];
 
-  weights.sort((a, b) =&gt; a - b);
+  weights.sort((a, b) => a - b);
   weights[i - 1] = (weights[i] === weights[i-1]) ? 0 : weights[i] - weights[i-1];
 
   return findLatestWeight(weights, i - 1);
@@ -84,7 +84,7 @@ module.exports = findLatestWeight;</pre>
   do {
     if (i === 0) return weights[0] || 0;
 
-    weights.sort((a, b) =&gt; a - b);
+    weights.sort((a, b) => a - b);
     weights[i-1] = (weights[i]=== weights[i-1]) ? 0 : weights[i]-weights[i-1];
 
     i--;
@@ -97,7 +97,7 @@ module.exports = findLatestWeight;</pre>
   do {
     if (i === 0) return weights[0] || 0;
 
-    weights.sort((a, b) =&gt; a - b);
+    weights.sort((a, b) => a - b);
     weights[i-1] = (weights[i]=== weights[i-1]) ? 0 : weights[i]-weights[i-1];
     weights.length = i; // &lt;--- вот так
     i--;
@@ -110,8 +110,8 @@ module.exports = findLatestWeight;</pre>
   let max1I = 0;
   let max2I = 1;
   for(let i = 2; i &lt; arr.length; i++) {
-    if (arr[i] > max1) {
-      if (max1 > max2) {
+    if (arr[i] &gt; max1) {
+      if (max1 &gt; max2) {
         max2 = arr[i];
         max2I = i;
       } else {
@@ -156,7 +156,7 @@ module.exports = findLatestWeight;</pre>
   <h2>B. БЭМ</h2>
 
   <p>Авторы: Евгений Мищенко, Владимир Гриненко @tadatuta</p>
-
+  
   <h4>Условие</h4>
   <p>Верстальщик Александр участвует в множестве проектов с использованием БЭМ-методологии. Он даже создал удобный плагин для любимой IDE, который позволяет ему писать имена классов в сокращённой записи и разворачивать их в полную. Но проблема в том, что для каждого проекта люди устанавливают разные разделители между блоком, элементом и модификатором (block__mod__val—elem, block–mod–val___elem), и ему приходится каждый раз править это в своём плагине вручную. Помогите Александру написать модуль, который будет на основании класса определять разделитель для сущностей. Правило для разделителей — произвольное количество символов (не буквы). Примеры возможных нотаций (модификаторы для блока во входящих данных могут быть без значения):</p>
 <pre>block_mod__elem // Считаем, что модификатор идёт первым
@@ -168,18 +168,18 @@ block__elem_mod_mod</pre>
     <li>Классы в проектах пишут только маленькими буквами.</li>
     <li>На вход модуля подаётся строка с валидным CSS-классом.</li>
   </ul>
-
+  
   <h4>Модуль должен вернуть ответ вида:</h4>
 <pre>{
   mod: "_", // разделитель для модификатора
   elem: "__", // разделитель для элемента
 }</pre>
-
+  
   <h4>Оформить модуль необходимо как commonJS-модуль:</h4>
 <pre>module.exports = function(str) {
 
 }</pre>
-
+  
   <details>
     <summary>Решение</summary>
     <h4>Решение</h4>
@@ -214,11 +214,11 @@ block__elem_mod_mod</pre>
 <article class="article">
   <div class="anchor" id="c"></div>
   <h2>C. Фабрика клонов</h2>
-
+  
   <p>Авторы: Дмитрий Андриянов @dima117, Алексей Гусев</p>
 
 
-  <h4>Условие</h4>
+  <h4>Условие</h4>  
   <p>За окном 2319 год. Корпорации клонируют успешных сотрудников, чтобы они выполняли сложные задачи.</p>
   <p>На производстве клонов решили маркировать новые «изделия» с помощью татуировки с баркодом на плече — чтобы отличать клонов между собой.</p>
   <p>Помогите сотрудникам фабрики написать функцию, которая будет отрисовывать баркод с информацией о клоне.</p>
@@ -528,7 +528,7 @@ const processTr = (tr) => {
 };</pre>
 
     <p>Для работы с тестовым содержимым DOM необходимо выполнить требования, о которых сказано в условии:</p>
-<pre>const clearLineBreaks = (str) =&gt; str.replace(/\r?\n|\r/g, '');
+<pre>const clearLineBreaks = (str) => str.replace(/\r?\n|\r/g, '');
 const clearSpaces = (str) => str.replace(/\s+/g, ' ');
 const clearString = (str) => clearSpaces(clearLineBreaks(str)).trim();</pre>
 
@@ -549,7 +549,7 @@ const clearString = (str) => clearSpaces(clearLineBreaks(str)).trim();</pre>
     <p>Важно вспомнить, что информация о выравнивании колонок может отсутствовать во входных данных:</p>
 <pre>const updateAlignments = () => {
 	if (alignments.length &gt; 0) return;
-	alignments.push(...rows[0].map(x =&gt; defaultAlign));
+	alignments.push(...rows[0].map(x => defaultAlign));
 };
 
 updateAlignments();</pre>
@@ -570,8 +570,8 @@ const delimiter = `|${alignmentsContents.join('|')}|`;</pre>
     <p>Завершающим этапом будет формирование Markdown-строки, содержащей все данные, прочитанные из HTML:</p>
 <pre>const lineEnd = '\n';
 
-rows.forEach((row, i) =&gt; {
-  if (i > 0) markdown += lineEnd;
+rows.forEach((row, i) => {
+  if (i &gt; 0) markdown += lineEnd;
 
   const mdRow = `| ${row.join(' | ')} |`;
   markdown += mdRow;
@@ -593,7 +593,7 @@ return markdown;</pre>
 <article class="article">
   <div class="anchor" id="e"></div>
   <h2>E. Пандемия вируса</h2>
-
+  
   <p>Авторы: Андрей Мокроусов, Иван Петухов</p>
 
   <p>Всемирная Организация Здравоохранения опубликовала доклад о признаках надвигающейся пандемии нового вируса, который угрожает фронтенд-разработчикам. Известно, что вирус никак не проявляет себя до тех пор, пока носитель не увидит JS-код, содержащий некоторое выражение. Как только заражённый увидел это выражение, он теряет способность писать код на JS и начинает непроизвольно писать код на Фортране.</p>
@@ -697,13 +697,13 @@ function traverse(
             onNodeEnter(astNode, scope);
 
             const innerScope = resolveScope(astNode, scope),
-                keys = Object.keys(astNode).filter(key =&gt; {
+                keys = Object.keys(astNode).filter(key => {
                     // loc - служебное свойство, а не ast-узел.
                     return key !== 'loc' &&
                         astNode[key] && typeof astNode[key] === 'object';
                 });
 
-            keys.forEach(key =&gt; {
+            keys.forEach(key => {
                 // Обход всех потомков.
                 _inner(astNode[key], innerScope);
             });
@@ -839,7 +839,7 @@ Scope.prototype = {
 +
 +    return result;
 +};</pre>
-
+ 
     <p>По последнему вызову traverse видно, что при обходе требуется информация о родителях, чтобы корректно отфильтровать идентификаторы в MemberExpression и ObjectProperty. Добавляем:</p>
 <pre>--- a/traverse.js
 +++ b/traverse.js
@@ -947,8 +947,8 @@ Scope.prototype = {
           if (object.type !== 'Identifier' ||</pre>
 
     <p>Этот код всё ещё содержит недостатки: он никак не использует области видимости и переменые. Однако он хотя бы проходит первые три теста. Теперь переходим к пункту 1.</p>
-    <h4>Улучшение Scope</h4>
-    <p>Нужно добавить в Scope сбор информации о переменных и их значениях. Кроме того, нужно сделать так, чтобы собранная информация не терялась между вызовами traverse:</p>
+    <h4>Улучшение Scope</h4>    
+    <p>Нужно добавить в Scope сбор информации о переменных и их значениях. Кроме того, нужно сделать так, чтобы собранная информация не терялась между вызовами traverse:</p>  
 <pre>--- a/traverse.js
 +++ b/traverse.js
 @@ -1,3 +1,12 @@
@@ -1046,9 +1046,9 @@ Scope.prototype = {
       traverse(ast, (node, scope) => {
           if (node.type !== 'CallExpression') {
               return;</pre>
-
-    <h4>Использование Scope</h4>
-    <p>Теперь добавим использование знаний о переменных. Каждая часть выражения может быть помещена в переменную, поэтому будем обращаться к Scope после после каждой части. Заметьте, что сам Scope тоже может меняться, поскольку значения переменных привязаны к своей области видимости:</p>
+          
+    <h4>Использование Scope</h4>      
+    <p>Теперь добавим использование знаний о переменных. Каждая часть выражения может быть помещена в переменную, поэтому будем обращаться к Scope после после каждой части. Заметьте, что сам Scope тоже может меняться, поскольку значения переменных привязаны к своей области видимости:</p>    
 <pre>--- a/traverse.js
 +++ b/traverse.js
 @@ -146,13 +146,17 @@ Scope.prototype = {
@@ -1116,9 +1116,9 @@ Scope.prototype = {
           if (object.type !== 'Identifier' ||
               object.name !== 'Z') {
               return;</pre>
-
-    <h4>Последние улучшения</h4>
-    <p>Самое время ещё раз посмотреть на весь код: решение проходит только пять тестов из девяти. Можно выделить три проблемы:</p>
+              
+    <h4>Последние улучшения</h4>     
+    <p>Самое время ещё раз посмотреть на весь код: решение проходит только пять тестов из девяти. Можно выделить три проблемы:</p>     
     <ul>
       <li>Нет проверки, что Z — это необходимый нам глобальный объект, а не какая-то переменная.</li>
       <li>Нет проверки, что в функции нашлось использование именно аргумента нужной функции, а не вложенной переменной с тем же именем.</li>
@@ -1127,7 +1127,7 @@ Scope.prototype = {
       </li>
     </ul>
 
-    <p>Исправляем эти три пункта, и решение готово.</p>
+    <p>Исправляем эти три пункта, и решение готово.</p>          
 <pre>--- a/traverse.js
 +++ b/traverse.js
 @@ -128,10 +128,23 @@ Scope.prototype = {
@@ -1513,7 +1513,7 @@ module.exports = function (ast) {
 <article class="article">
   <div class="anchor" id="f"></div>
   <h2>F. Задача Framework-часов</h2>
-
+  
   <p>Авторы: Дмитрий Андриянов, Алексей Бережной @collapsus</p>
   <p>Участникам нужно было написать приложение для необычной предметной области при помощи готового фреймворка с не очень удобным API. Мы хотели дать участникам только базовую часть документации фреймворка — чтобы узнать подробности, требовалось прочитать его код. В качестве предметной области мы выбрали управление стрелочными часами.</p>
 
@@ -1633,7 +1633,7 @@ function getRotateFactor(pos, target, forward = true) {
 
   const factor = angle / Framework.SPEED;
   // если желаемый коэффициент превышает максимально допустимый, берём максимально допустимый
-  return Math.abs(factor) &gt; MAX_FACTOR ? Math.sign(factor) * MAX_FACTOR : factor;
+  return Math.abs(factor) > MAX_FACTOR ? Math.sign(factor) * MAX_FACTOR : factor;
 }</pre>
 
     <p>Задаём обработчик для кнопки переключения между планетами:</p>
@@ -1735,7 +1735,7 @@ class MyClock extends Clock {
         this.forward = false;
     }
 }</pre>
-
+    
     <h4>Тестирование</h4>
     <p>Задание проверялось автотестами. В них мы сделали заглушку для генератора тиков и передавали её в параметрах конструктора. Таким образом, вместо того, чтобы генерировать тики по таймеру, мы генерировали нужное количество тиков в коде теста и затем проверяли состояние стрелок.</p>
     <p>Мы проверяли несколько ситуаций: стандартное движение стрелок, дискретность движения, перевод стрелок, превышение максимальной скорости, направление движения стрелок при переводе (условия, связанные с направлением, были разными в разных вариантах задачи).</p>
