--- a/src/components/code/code-js/js-coderun/pages/elem-yandex-01.html
+++ b/src/components/code/code-js/js-coderun/pages/elem-yandex-01.html
@@ -16,10 +16,11 @@
 
   <p><a href="#task-1">1. Поиск двух чисел в массиве с определённой разницей</a></p>
   <p><a href="#task-2">2. Поиск двух чисел в массиве с определённой суммой</a></p>
-  <p><a href="#task-3">3. Пересечение массивов чисел. Сколько минут работают все кассы одновременно</a></p>
-  <p><a href="#task-4">4. Проверить число Фибоначчи</a></p>
-  <p><a href="#task-5">5. Шахматная доска. Количество пар ладей, которые бьют друг друга</a></p>
-  <p><a href="#task-6">6. Словарь с текстом и ударной буквой</a></p>
+  <p><a href="#task-3">3. Поиск всех комбинаций чисел, сумма которых равна 10</a></p>
+  <p><a href="#task-4">4. Пересечение массивов чисел. Сколько минут работают все кассы одновременно</a></p>
+  <p><a href="#task-5">5. Проверить число Фибоначчи</a></p>
+  <p><a href="#task-6">6. Шахматная доска. Количество пар ладей, которые бьют друг друга</a></p>
+  <p><a href="#task-7">7. Словарь с текстом и ударной буквой</a></p>
 </div>
 
 
@@ -88,10 +89,20 @@
 </article>
 
 
-<!-- 3. Пересечение массивов чисел. Сколько минут работают все кассы одновременно -->
+<!-- 3. Поиск всех комбинаций чисел, сумма которых равна 10 -->
 <article class="article">
   <div class="anchor" id="task-3"></div>
-  <h2>3. Пересечение массивов чисел. Сколько минут работают все кассы одновременно</h2>
+  <h2>3. Поиск всех комбинаций чисел, сумма которых равна 10</h2>
+
+  <p>Написать функцию, которая из входящено массива выберет все комбинации чисел, сумма которых будет равна 10</p>
+  <p>Не существует более эффективного решения чем полный перебор. Полный перебор всех сочетаний имеет экспоненциальную сложность O(2^N).</p>
+</article>
+
+
+<!-- 4. Пересечение массивов чисел. Сколько минут работают все кассы одновременно -->
+<article class="article">
+  <div class="anchor" id="task-4"></div>
+  <h2>4. Пересечение массивов чисел. Сколько минут работают все кассы одновременно</h2>
 
   <h4>Задача с Тренировки по алгоритмам 5.0. Описание</h4>
   <p>На вокзале билеты продаются в N кассах. Каждая касса работает без перерыва определенный промежуток времени по фиксированному расписанию (одному и тому же каждый день). Требуется определить, сколько минут в течение суток работают все кассы одновременно.</p>
@@ -109,10 +120,10 @@
 </article>
 
 
-<!-- 4. Проверить число Фибоначчи -->
+<!-- 5. Проверить число Фибоначчи -->
 <article class="article">
-  <div class="anchor" id="task-4"></div>
-  <h2>4. Проверить число Фибоначчи</h2>
+  <div class="anchor" id="task-5"></div>
+  <h2>5. Проверить число Фибоначчи</h2>
 
   <h4>Задача с Тренировки по алгоритмам 5.0. Описание</h4>
 
@@ -122,10 +133,10 @@
 </article>
 
 
-<!-- 5. Шахматная доска. Количество пар ладей, которые бьют друг друга -->
+<!-- 6. Шахматная доска. Количество пар ладей, которые бьют друг друга -->
 <article class="article">
-  <div class="anchor" id="task-5"></div>
-  <h2>5. Шахматная доска. Количество пар ладей, которые бьют друг друга</h2>
+  <div class="anchor" id="task-6"></div>
+  <h2>6. Шахматная доска. Количество пар ладей, которые бьют друг друга</h2>
 
   <h4>Задача с Тренировки по алгоритмам 5.0. Описание</h4>
   <p>На шахматной доске N*N находятся M ладей (ладья бьет клетки на той же горизонтали или вертикали до ближайшей занятой). Определите, сколько пар ладей бьют друг друга.</p>
@@ -138,10 +149,10 @@
 </article>
 
 
-<!-- 6. Словарь с текстом и ударной буквой -->
+<!-- 7. Словарь с текстом и ударной буквой -->
 <article class="article">
-  <div class="anchor" id="task-6"></div>
-  <h2>6. Словарь с текстом и ударной буквой</h2>
+  <div class="anchor" id="task-7"></div>
+  <h2>7. Словарь с текстом и ударной буквой</h2>
 
   <h4>Задача с Тренировки по алгоритмам 5.0. Описание</h4>
   <p>Есть словарь, где в каждом слове выделена ударная буква, также задан текст.</p>
@@ -163,4 +174,9 @@
   <p>Иначе просто проверяем, что в нем ровно одно ударение</p>
   <p>Тут два варианта решения задачи - через Множества и через Словари.</p>
 </article>
+
+
+
+
+
 
