--- a/src/components/front/algorithm/pages/elem-algorithm.html
+++ b/src/components/front/algorithm/pages/elem-algorithm.html
@@ -2,11 +2,13 @@
 
 
 <!-- Содержание -->
-<div class="article">
+<article class="article">
   <h2>Содержание</h2>
+  
   <p><a href="#links">Links</a></p>
   <p><a href="#props">Свойства алгоритмов</a></p>
-</div>
+  <p><a href="#alg">Какой алгоритм выбрать</a></p>
+</article>
 
 
 <!-- links -->
@@ -44,4 +46,15 @@
     <li><strong>Детерминированность</strong> – каждый шаг алгоритма должен быть однозначно определен – записан на формальном языке исполнителя. Детерминированность обеспечивает совпадение результатов, получаемых при многократном выполнении алгоритма, на одном и том же наборе входных данных.</li>
     <li><strong>Массовость</strong> – алгоритм решения задачи должен быть применим для некоторого класса задач, различающихся лишь значениями входных данных.</li>
   </ol>
+</article>
+
+
+<!-- Какой алгоритм выбрать -->
+<article class="article">
+  <div class="anchor" id="alg"></div>
+  <h2>Какой алгоритм выбрать</h2>
+
+  <p>Если нет необходимости в обработке большого количества данных, то стоит делать выбор в пользу более понятного и читаемого решения.</p>
+  <p>Преждевременная оптимизация - это плохо.</p>
+  <p>Не всехда понятно где граница между большим набором данных и малым.</p>
 </article>
