--- a/src/components/front/algorithm/pages/elem-complexity.html
+++ b/src/components/front/algorithm/pages/elem-complexity.html
@@ -4,19 +4,19 @@
 <!-- Содержание -->
 <div class="article">
   <h2>Содержание</h2>
-      <p><a href="#bigo">Сложность</a></p>
-      <ol>
-        <li><a href="#bigo-1">Константное время O(1)</a></li>
-        <li><a href="#bigo-logn">Логарифмическое время O(log n)</a></li>
-        <li><a href="#bigo-n">Линейное время O(n)</a></li>
-        <li><a href="#bigo-nlogn">Линейно-логарифмическое время O(n log n)</a></li>
-        <li><a href="#bigo-n2">Квадратичное время O(n**2)</a></li>
-        <li><a href="#bigo-n3">Кубическое время O(n**3)</a></li>
-        <li><a href="#bigo-cn">Экспоненциальное время O(c**n)</a></li>
-        <li><a href="#bigo-f">Факториальное время O(!)</a></li>
-      </ol>
-    </li>
-    <p><a href="#bigo-js">Сложность встроенных методов JavaScript</a></p>
+
+  <p><a href="#bigo">Сложность</a></p>
+  <ol>
+    <li><a href="#bigo-1">Константное время O(1)</a></li>
+    <li><a href="#bigo-logn">Логарифмическое время O(log n)</a></li>
+    <li><a href="#bigo-n">Линейное время O(n)</a></li>
+    <li><a href="#bigo-nlogn">Линейно-логарифмическое время O(n log n)</a></li>
+    <li><a href="#bigo-n2">Квадратичное время O(n**2)</a></li>
+    <li><a href="#bigo-n3">Кубическое время O(n**3)</a></li>
+    <li><a href="#bigo-cn">Экспоненциальное время O(c**n)</a></li>
+    <li><a href="#bigo-f">Факториальное время O(!)</a></li>
+  </ol>
+  <p><a href="#bigo-js">Сложность встроенных методов JavaScript</a></p>
 </div>
 
 
@@ -70,8 +70,39 @@
   <div class="anchor" id="bigo-logn"></div>
   <h3>2. Логарифмическое время O(log n)</h3>
   <p>Логарифмическое время - это вторая по эффективности временная сложность. Время выполнения алгоритма растет пропорционально логарифму размера входных даных.</p>
-  <p>Время выполнения алгоритма растет медленно с увеличением размера входных данных. Например, бинарный поиск в отсортированном массиве.</p>
+  <p>Время выполнения алгоритма растет медленно с увеличением размера входных данных.</p>
+  
+  <h4>Пример 1. Бинарный поиск в отсортированном массиве</h4>
+<pre>function binarySearch(arr, target) {
+  let left = 0;
+  let right = arr.length - 1;
+  while (left &lt;= right) {
+    let mid = Math.floor((left + right) / 2);
+    if (arr[mid] === target) {
+        return mid; // элемент найден
+    } else if (arr[mid] &lt; target) {
+        left = mid + 1; // искать в правой половине
+    } else {
+        right = mid - 1; // искать в левой половине
+    }
+  }
+  return -1; 
+}</pre>
   <p>Бинарный поиск ищет значение в отсортированном массиве, разделяя его пополам на каждой итерации. Поиск начинается с середины массива. Если значение, которое мы ищем, больше среднего элемента, поиск продолжается в правой половине массива. Если оно меньше, то в левой. Таким образом, на каждой итерации мы уменьшаем область поиска примерно в два раза, что обеспечивает логарифмическую сложность O(log n).</p>
+
+  <h4>Пример 2. Перевод числа в двоичную систему</h4>
+<pre>function decToBin(dec) {
+  if (dec === 0) {
+    return '0';
+  }
+  let bin = '';
+  while (dec > 0) {
+    bin = dec % 2 + bin;
+    dec = Math.floor(dec / 2);
+  }
+  return bin;
+}</pre>
+  <p>Сложность будет логарифмическое. Мы здесь так же как в бинарном поиске постоянно делим на 2.</p>
 </article>
 
 
@@ -79,8 +110,10 @@
 <article class="article">
   <div class="anchor" id="bigo-n"></div>
   <h3>Линейное время O(n)</h3>
+
   <p>Время выполнения алгоритма пропорционально размеру входных данных. Например, просмотр всех элементов в массиве.</p>
-  <p>Например функция findMax ищет максимальное значение в массиве arr.</p>
+
+  <h4>Пример 1. Функция findMax возвращает максимальное число из массива</h4>
 <pre>function findMax(arr) {
   let max = arr[0];
   for (let i = 1; i &lt; arr.length; i++) {
@@ -91,6 +124,25 @@
   return max;
 }</pre>
   <p>Алгоритм начинает с предположения, что первый элемент массива (arr[0]) является максимальным, а затем линейно (то есть по одному элементу) перебирает остальные элементы, сравнивая каждый с текущим максимальным. Сложность этого алгоритма O(n), так как время выполнения растет линейно с увеличением количества элементов в массиве arr.</p>
+
+  <h4>Пример 2. Функция getSum возвращает сумму чисел массива</h4>
+<pre>function getSum(arr) {
+  let sum = 0;
+  for (let i = 0; i &lt; arr.length; i++) {
+    sum += arr[i];
+  }
+  return sum;
+}</pre>
+
+  <h4>Пример 3. Отрисовка TODO листа за O(N+M)</h4>
+<pre>function renderTodos(todos) {
+  const n = todos.length;
+  const todoListBlock = document.getElementsByClassName('todo-list')[0];
+  for (let i = 0; i &lt; n; i++) {
+    todoListBlock.appendChild(renderTodo(todos[i].comment));
+  }
+}</pre>
+  
 </article>
 
 
@@ -109,7 +161,8 @@
   <h3>Квадратичное время O(n**2)</h3>
   <p>Алгоритм выполняется за квадратичное время, когда его производительность прямо пропорциональна размеру задачи в квадрате.</p>
   <p>Например, вложенный цикл будет иметь квадратичную сложность, когда данные перебираются в цикле и для каждого элемента опять в цикле перебираются данные. Простые алгоритмы сортировки, такие как пузырьковая и сортировка вставками выполняются за квадратичное время.</p>
-  <p>Например функция sumOfPairs ищет сумму всех пар элементов в массиве:</p>
+
+  <h4>Пример 1. Функция sumOfPairs ищет сумму всех пар элементов в массиве:</h4>
 <pre>function sumOfPairs(arr) {
   let sum = 0;
   for (let i = 0; i &lt; arr.length; i++) {
@@ -122,6 +175,17 @@
 const myArray = [1, 2, 3, 4];
 console.log(sumOfPairs(myArray)); // Результат: 40</pre>
   <p>Этот код имеет два вложенных цикла, каждый из которых проходится по всему массиву. Количество операций в циклах равно n * n, где n - это длина массива.</p>
+
+  <h4>Пример 2. Отрисовка TODO листа за O(N*M)</h4>
+<pre>function renderTodos(todos) {
+  const n = todos.length;
+  for (let i = 0; i &lt; n; i++) {
+    document.getElementsByClassName('todo-list')[0]
+      .appendChild(renderTodo(todos[i].comment));
+  }
+}</pre>
+  <p>На вход приходит список тудушек и есть какая-то функция renderTodo. Она не описана. Будем считать что она работает за константную сложность.</p>
+  <p>Здесь полиномиальная сложность - O(N*M). Где N это количество элементов в массиве todos, а M количество узлов в DOM дереве. Потому что внутри цикла каждый раз делается поиск по классу, который работает за линейную сложность.</p> 
 </article>
 
 
@@ -173,7 +237,8 @@ console.log(multiplyMatrices(matrixA, matrixB));</pre>
   <p>Наихудшая сложность алгоритма. Содержит константу, увеличенную до размеров задачи. Количество шагов алгоритма растет с невероятной скоростью.</p>
   <p>Например, для угадывания пароля из 8 десятичных цифр придется выполнить 100 миллионов шагов. Отгадывание пароля это пример алгоритма полного перебора, проверяющего все возможные варианты. Алгоритмы полного перебора неэффективны.</p>
   <p>Это часто встречается в алгоритмах, которые решают проблемы методом "разделяй и властвуй" или используют рекурсию без оптимизации.</p>
-  <p>Примером алгоритма с экспоненциальной сложностью может служить рекурсивное вычисление чисел Фибоначчи:</p>
+
+  <h4>Пример 1. Рекурсивное вычисление чисел Фибоначчи</h4>
 <pre>function fibonacci(n) {
   if (n &lt;= 1) {
       return n;
@@ -182,6 +247,9 @@ console.log(multiplyMatrices(matrixA, matrixB));</pre>
   }
 }</pre>
   <p>Этот код использует рекурсию для вычисления чисел Фибоначчи. Однако каждый раз, когда вызывается функция fibonacci, она порождает два дополнительных вызова, что приводит к экспоненциальному увеличению количества вызовов функций с увеличением n.</p>
+
+  <h4>Пример 2. Задача о сумме подмножеств</h4>
+  <p>Написать функцию, которая из входящено массива выберет все комбинации чисел, сумма которых будет равна 10</p>
 </article>
 
 
@@ -247,4 +315,6 @@ permute(myArray);</pre>
       <p>Добавление/удаление свойств объекта: Обычно сложность добавления/удаления свойств в объекте - O(1).</p>
     </li>
   </ol>
+
+  <p>Если у нас есть задача по частому поиску в массиве, например, мы хотим N раз найти элемент в массиве из N элементов. То решение с использованием indexOf даст нам квадратичную сложность. Но если мы вначале остортируем массив с помощью сортировки слиянием, а затем будем искать бинарным поиском то в сумме это даст линейно-логарифмическую сложность. И тогда наш код будет работать гораздо быстрее.</p>
 </article>
