--- a/src/components/front/algorithm/pages/elem-search.html
+++ b/src/components/front/algorithm/pages/elem-search.html
@@ -66,13 +66,15 @@
   let left = 0;
   let right = arr.length - 1;
 
-  //Запускаем цикл, который итерируется до тех пор, пока указатель на начало не совпадает с указателем на конец массива.
+  // Запускаем цикл, который итерируется до тех пор,
+  // пока указатель на начало не совпадает с указателем на конец массива.
   while (left &lt;= right) {
 
     //Внутри цикла создаём указатель на середину массива.
     let mid = Math.floor((left + right) / 2);
 
-    // Проверяем, если элемент по середине равен искомому элементу, возвращаем его индекс.
+    // Проверяем, если элемент по середине равен искомому элементу,
+    // возвращаем его индекс.
     if (arr[mid] === target) {
         return mid; // элемент найден
     } else if (arr[mid] &lt; target) {
