--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -8,6 +8,7 @@
   <p><a href="#rs-test">RS Auto Test</a></p>
   <p><a href="#dsr-exam">DSR Exam</a></p>
   <p><a href="#neoflex">Neoflex</a></p>
+  <p><a href="#yandex">Яндекс</a></p>
   <p><a href="#hh">hh.ru</a></p>
   <p><a href="#quiz">quiz</a></p>
 </div>
@@ -83,6 +84,14 @@
   <h2>Neoflex Frontend 2024</h2>
   <p><a href="neoflex/nf-test.html" class="neoflex-test">Neoflex 2024 frontend test</a> (25 из 25)</p>
   <p><a href="neoflex/ef-test1.html" class="neoflex-test">15-минутный Quick English Check</a></p>
+</article>
+
+
+<!-- Яндекс -->
+<article class="article">
+  <div class="anchor" id="yandex"></div>
+  <h2>Яндекс</h2>
+  <p><a href="yandex/ya-front.html" class="yandex-test">Яндекс. Фронтенд Квиз 17 сентября 2023</a> (15 из 25)</p>
 </article>
 
 
