--- a/src/components/front/front-vacancy/pages/elem-yandex.html
+++ b/src/components/front/front-vacancy/pages/elem-yandex.html
@@ -6,12 +6,12 @@
     <div>Яндекс Образование. Школьникам Студентам Родителям</div>
   </li>
   <li>
-    <a href="https://education.yandex.ru/kruzhok">https://education.yandex.ru/kruzhok</a>
-    <div>Яндекс Образование. Олимпиадное программирование для школьников 6-11 классов</div>
+    <a href="https://education.yandex.ru/handbook">https://education.yandex.ru/handbook</a>
+    <div>Хендбуки по ключевым IT-дисциплинам. Бесплатные онлайн-учебники для увлечённых IT. Теоретические материалы дополняются практикой — можно решать задачи и следить за своим прогрессом.</div>
   </li>
   <li>
-    <a href="https://education.yandex.ru/vsosh">https://education.yandex.ru/vsosh</a>
-    <div>Яндекс Образование. Подготовка к олимпиаде по информатике для школьников 5-11 классов</div>
+    <a href="https://education.yandex.ru/handbook/algorithms">https://education.yandex.ru/handbook/algorithms</a>
+    <div>Основы алгоритмов</div>
   </li>
 </ol>
 
@@ -37,7 +37,7 @@
   </li>
   <li>
     <a href="https://academy.yandex.ru/handbook">https://academy.yandex.ru/handbook</a>
-    <div>Хендбуки Академии Яндекса по ключевым IT‑дисциплинам</div>
+    <div>Хендбуки Академии Яндекса по ключевым IT-дисциплинам</div>
   </li>
 </ol>
 
@@ -49,8 +49,8 @@
     <div>Яндекс Практикум — среда, где всё получится: и новая IT-профессия, и новая жизнь</div>
   </li>
   <li>
-    <a href="https://practicum.yandex.ru/frontend-developer/">https://practicum.yandex.ru/frontend-developer/</a>
-    <div>Программирование. С нуля. Курс «Фронтенд-разработчик». Научитесь писать код для сайтов и веб-сервисов — с нуля за 10 месяцев. Сделаете первые шаги или смените направление в IT.</div>
+    <a href="https://practicum.yandex.ru/algorithms-interview/">https://practicum.yandex.ru/algorithms-interview/</a>
+    <div>Бесплатный курс «Подготовка к алгоритмическому собеседованию»</div>
   </li>
 </ol>
 
@@ -107,5 +107,9 @@
   <li>
     <a href="https://yandex.ru/jobs/pages/frontend-interview">https://yandex.ru/jobs/pages/frontend-interview</a>
     <div>Советы для кандидатов: как мы нанимаем Фронтенд разработчиков</div>
+  </li>
+  <li>
+    <a href="https://habr.com/ru/companies/yandex/articles/449890/">https://habr.com/ru/companies/yandex/articles/449890/</a>
+    <div>Как проходят алгоритмические секции на собеседованиях в Яндекс (2019-05-07)</div>
   </li>
 </ol>
