--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -93,7 +93,7 @@ code {
   margin: .5em;
   padding: .5em;
   background-color: #f5f2f0;
-  overflow-x: scroll;
+  overflow-x: auto;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
