--- a/src/components/front/algorithm/pages/elem-sort.html
+++ b/src/components/front/algorithm/pages/elem-sort.html
@@ -3,8 +3,7 @@
 
 <!-- Содержание -->
 <div class="article">
-  <h2>Содержание</h2>
-  <p><a href="#sort">Сортировка</a></p>
+  <h2>Сортировка</h2>
   <ol>
     <li><a href="#sort-bubble">Сортировка пузырьком (Bubble Sort)</a></li>
     <li><a href="#sort-cocktail">Сортировка перемешиванием (шейкерная сортировка) (Cocktail sort)</a></li>
@@ -21,35 +20,15 @@
 </div>
 
 
-<!-- sort -->
-<article class="article">
-  <div class="anchor" id="sort"></div>
-  <h2>Сортировка</h2>
-
-  <ol>
-    <li>Сортировка пузырьком (Bubble Sort)</li>
-    <li>Сортировка перемешиванием (шейкерная сортировка) (Cocktail sort)</li>
-    <li>Сортировка расчёской (Comb sort)</li>
-    <li>Сортировка вставками (Insertion Sort)</li>
-    <li>Сортировка выбором (Selection sort)</li>
-    <li>Сортировка Шелла (Shell Sort)</li>
-    <li>Сортировка подсчетом (Counting Sort)</li>
-    <li>Сортировка слиянием (Merge Sort)</li>
-    <li>Пирамидальная сортировка (сортировка кучей) (HeapSort)</li>
-    <li>Быстрая сортировка Хоара (Quick Sort)</li>
-    <li>Гномья сортировка (Gnome Sort)</li>
-  </ol>
-</article>
-
-
 <!-- 1. Сортировка пузырьком (Bubble Sort) -->
 <article class="article">
   <div class="anchor" id="sort-bubble"></div>
   <h3>1. Сортировка пузырьком (Bubble Sort)</h3>
   <p>Сортировка пузырьком — один из самых известных алгоритмов сортировки. Здесь нужно последовательно сравнивать значения соседних элементов и менять числа местами, если предыдущее оказывается больше последующего. Таким образом элементы с большими значениями оказываются в конце списка, а с меньшими остаются в начале.</p>
   <p>Когда дойдем до конца массива, то самый последний элемент будет гарантированно на своем месте. Самый большой пузырек всплыл на поверхность воды. Мы повторим процедуру еще раз, но уже до предпоследнего элемента. После второй итерации, на своих позициях будет уже 2 последних элемента. Будем повторять алгоритм до тех пор, пока у нас не останется только первый элемент.</p>
+  <p>В первом цикле - число проходов по массиву, должно быть на 1 меньше чем длина массива.</p>
 <pre>function bubbleSort(arr) {
-  for (let i = 0; i &lt; arr.length; i++) {
+  for (let i = 0; i &lt; arr.length - 1; i++) {
     for (let j = 0; j &lt; arr.length - i; j++) {
       if (arr[j] &gt; arr[j + 1]) {
         let tmp = arr[j];
@@ -66,7 +45,7 @@
   <p>Алгоритм пузырьковой сортировки никак не следит за текущим состоянием массива. Даже если на вход мы отправим уже отсортированный массив, нам нужно будет столько же итераций цикла, как и для неотсортированного массива, чтобы получить результат. Быстродействие пузырьковой сортировки в JavaScript можно улучшить, если добавить флаг (логическую переменную) который будет следить за тем был ли хотя бы один обмен на текущей итерации. Если нет, то массив отсортирован и задача выполнена.</p>
 <pre>function bubbleSort(arr) {
   let isSwap = false;
-  for (let i = 0; i &lt; arr.length; i++) {
+  for (let i = 0; i &lt; arr.length - 1; i++) {
     for (let j = 0; j &lt; arr.length - i; j++) {
       if (arr[j] &gt; arr[j + 1]) {
         let temp = arr[j + 1];
@@ -278,28 +257,43 @@ function cocktailSort(arr) {
   <div class="anchor" id="sort-merge"></div>
   <h3>8. Сортировка слиянием (Merge Sort)</h3>
 
+  <p>Сложность линейно-логарифмическая O(N*logN). logN разбиений на половины. Итерация по массиву при каждом разбиении.</p> 
+  <p>Для реализации сортировки понадобится вспомогательный массив - это еще O(N) по памяти.</p>
+  <p>Сортировка слиянием использует принцип - разделяй и властвуй. Тот же самый принцип реализует бинарный поиск. Мы делим массив на две группы, потом каждую группу на две группы и так далее. Пока у нас не останутся пары. Берем первую пару и сравниваем элементы между собой и меняем их порядок. То же самое со второй парой. Потом эти две пары объединяем в четверку элементов, сравниваем и меняем порядок. И так далее.</p> 
 <pre>function Merge(a,low,mid,high) {    //Вспомогательная функция.
   var b = new Array(high+1-low), h, i, j = mid+1, k, h = low, i = 0;
-  while (h &lt;= mid && j &lt;= high )
-    { if (a[h] &lt;= a[j]){ b[ i ]=a[h]; h++; }
-      else             { b[ i ]=a[j]; j++; }
-      i++;
+  while (h &lt;= mid && j &lt;= high ) {
+    if (a[h] &lt;= a[j]) {
+      b[ i ]=a[h]; h++;
+    } else {
+      b[ i ]=a[j]; j++;
     }
-  if (h &gt; mid){ for (k = j; k &lt;= high; k++){ b[ i ]=a[k]; i++; } }
-  else        { for (k = h; k &lt;= mid; k++){  b[ i ]=a[k]; i++; } }    
-  for (k=0; k&lt;=high-low; k++) a[k+low]=b[k];
+    i++;
+  }
+  if (h &gt; mid) {
+    for (k = j; k &lt;= high; k++) {
+      b[ i ]=a[k]; i++;
+    }
+  } else {
+    for (k = h; k &lt;= mid; k++) {
+      b[ i ]=a[k]; i++;
+    }
+  }    
+  for (k=0; k&lt;=high-low; k++) {
+    a[k+low]=b[k];
+  } 
   return a;
 }
 
 function MergeSort(A) {     //Функция сортировки слиянияем.
-  function merge_sort(a,low,high)
-    { if (low &lt; high)
-      { var mid = Math.floor((low+high)/2);
-        merge_sort(a, low, mid);
-        merge_sort(a, mid+1, high);
-        Merge(a, low, mid, high);
-      }
+  function merge_sort(a,low,high) {
+    if (low &lt; high) {
+      var mid = Math.floor((low+high)/2);
+      merge_sort(a, low, mid);
+      merge_sort(a, mid+1, high);
+      Merge(a, low, mid, high);
     }
+  }
   var n = A.length;
   merge_sort(A, 0, n-1);
   return A;
