--- a/src/components/front/front-base/pages/elem-structure.html
+++ b/src/components/front/front-base/pages/elem-structure.html
@@ -1,39 +1,45 @@
 <h1>Структуры данных</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
-
-  <div>
-    <p><a href="#about">О структурах данных</a></p>
-    <p><a href="#links">Links</a></p>
-    <p><a href="#array">1. Массив (Array)</a></p>
-    <p><a href="#dynamic-array">2. Динамический массив (Dynamic array)</a></p>
-    <p><a href="#queue">3. Очередь (Queue)</a></p>
-    <p><a href="#stack">4. Стек (Stack)</a></p>
-    <p><a href="#deck">5. Дек (Deck)</a></p>
-    <p><a href="#linked-list">6. Связанный список (Linked list)</a></p>
-    <p><a href="#set">7. Множество (Set)</a></p>
-    <p><a href="#map">8. Карта (Map). Ассоциативный массив, словарь</a></p>
-    <p><a href="#hash-tables">9. Хэш-таблицы (Hash-tables)</a></p>
-    <p><a href="#graph">10. Граф (Graph)</a></p>
-    <p><a href="#binary-search-tree">11. Двоичное дерево поиска (Binary search tree)</a></p>
-    <p><a href="#trie">12. Префиксное дерево (Trie)</a></p>
-    <p><a href="#binary-heap">13. Двоичная куча (Binary heap)</a></p>
-    </div>
-
-</div>
-
-
-<!-- about -->
 <article class="article">
-  <div class="anchor" id="about"></div>
-  <h2>Что такое структуры данных</h2>
+  <h2>Содержание</h2>
+
+  <p><a href="#links">Links</a></p>
+  <p><a href="#struct">Структуры данных</a></p>
+  <ol>
+    <li><a href="#array">Массив (Array)</a></li>
+    <li><a href="#dynamic-array">Динамический массив (Dynamic array)</a></li>
+    <li><a href="#queue">Очередь (Queue)</a></li>
+    <li><a href="#stack">Стек (Stack)</a></li>
+    <li><a href="#deck">Дек (Deck)</a></li>
+    <li><a href="#linked-list">Связанный список (Linked list)</a></li>
+    <li><a href="#set">Множество (Set)</a></li>
+    <li><a href="#map">Карта (Map). Ассоциативный массив, словарь</a></li>
+    <li><a href="#hash-tables">Хэш-таблицы (Hash-tables)</a></li>
+    <li><a href="#graph">Граф (Graph)</a></li>
+    <li><a href="#binary-search-tree">Двоичное дерево поиска (Binary search tree)</a></li>
+    <li><a href="#trie">Префиксное дерево (Trie)</a></li>
+    <li><a href="#binary-heap">Двоичная куча (Binary heap)</a></li>
+  </ol>
+  <p><a href="struct-js">Структуры данных в JS</a></p>
+</article>
+  
+
+<!-- links -->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>Links</h2>
+
+  <p><a href="https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/">10 структур данных, которые должен знать каждый разработчик</a> (Сергей Савельев, Лена Шпрингер 2022.08.10 5 мин)</p>
+  <p><a href="https://blog.skillfactory.ru/glossary/struktura-dannyh/">Структура данных</a> (2023.03.25)</p>
+</article>
+
+
+<!-- Структуры данных -->
+<article class="article">
+  <div class="anchor" id="struct"></div>
+  <h2>Структуры данных</h2>
   
   <p>Структура данных — это способ организации информации для более эффективного использования. В программировании структурой обычно называют набор данных, связанных определённым образом. Например, массив — это структура.</p>
   <p>Со структурой можно работать: добавлять данные, извлекать их и обрабатывать, например изменять, анализировать, сортировать. Для каждой структуры данных — свои алгоритмы. Работа программиста — правильно выбирать уже написанные готовые либо писать свои.</p>
@@ -51,16 +57,6 @@
   <p>Фактически использование структур данных в программировании начинается ещё с задания переменной. Формат переменной — определённая структура данных, так как в память переменная записывается конкретным способом. Но на практике программисты работают с другими структурами, которые объединяют в себе разные переменные и типы данных. Далее приведем описание и классификацию основных структур данных, чтобы было удобнее в них разобраться.</p>
   <p>Структуру данных для работы выбирают в зависимости от задачи. Если нужно что-то простое, подойдёт обычный массив. Когда требуется создать очередь или историю запросов, выбирают связный список или очередь. Если нужен поиск и сортировка, поможет двоичное дерево. Именно поэтому важно знать все типы данных в программировании, чтобы подбирать оптимальный в любой ситуации.</p>
   </article>
-  
-
-<!-- links -->
-<article class="article">
-  <div class="anchor" id="links"></div>
-  <h2>Links</h2>
-
-  <p><a href="https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/">10 структур данных, которые должен знать каждый разработчик</a> (Сергей Савельев, Лена Шпрингер 2022.08.10 5 мин)</p>
-  <p><a href="https://blog.skillfactory.ru/glossary/struktura-dannyh/">Структура данных</a> (2023.03.25)</p>
-</article>
   
 
 <!-- array -->
@@ -285,3 +281,69 @@
 
   <p>Двоичные кучи — двоичные деревья, заполненные целиком. У каждого узла два потомка. Потомки в зависимости от типа дерева должны быть строго больше предков или меньше либо равны им.</p>
 </article>
+
+
+<!-- Структуры данных в JS -->
+<article class="article">
+  <div class="anchor" id="struct-js"></div>
+  <h2>Структуры данных в JS</h2>
+
+  <h4>Основные структуры в JS</h4>
+  <ol>
+    <li>Array</li>
+    <li>Object</li>
+    <li>Map</li>
+    <li>Set</li>
+    <li>DOM дерево</li>
+  </ol>
+
+  <h4>Array</h4>
+  <p>Массив удобен для хранения данных которые потом нужно итерировать.</p>
+  <ul>
+    <li>взятие по интексу - O(1)</li>
+    <li>pop - O(1)</li>
+    <li>push - амортизированное O(1)</li>
+    <li>shift/unshift - O(N)</li>
+    <li>sort - O(N*logN)</li>
+    <li>find/includes/indexOf - O(N)</li>
+  </ul>
+
+  <h4>Object</h4>
+  <p>Объект работает на хэш-функции. Объект удобен когда нужно быстро получить данные по ключу, либо удалить эти данные.</p>
+  <ul>
+    <li>взятие по ключу - амортизированное O(1)</li>
+    <li>запись - амортизированное O(1)</li>
+    <li>удаление - амортизированное O(1)</li>
+    <li>итерация Object.entries/Object.keys/Object.values - O(N)</li>
+  </ul>
+
+  <h4>Map</h4>
+  <p>Map появился в es6. Это как у объекта пары "ключ: значение". Итерация по Map это константная сложность. А основные операции работают по спецификации es6 лучше чем за O(N). Если Map реализован в виде объекта это будет амортизированное O(1). Если Map реализован в виде бинарного дерева это будет O(logN). Будет ли в конкретной реализации хеш-таблицы или бинарное дерево решают разработчики браузеров.</p>
+  <ul>
+    <li>set - амортизированное O(1) или O(logN)</li>
+    <li>delete - амортизированное O(1) или O(logN)</li>
+    <li>get/has - амортизированное O(1) или O(logN)</li>
+    <li>entries/keys/values - O(N)</li>
+  </ul>
+
+  <h4>Set</h4>
+  <p>Set появился в es6. Это коллекция уникальных значений. Работает точно так же как и Map. Отличается тем что в Map есть ключ и значение, а в Set есть только значение.</p>
+  <ul>
+    <li>add - амортизированное O(1) или O(logN)</li>
+    <li>delete - амортизированное O(1) или O(logN)</li>
+    <li>has - амортизированное O(1) или O(logN)</li>
+    <li>entries/values - O(N)</li>
+  </ul>
+
+  <h4>DOM дерево</h4>
+  <p>Слабым местом этой структуры является поиск по классу или по селектору. Сложность такого поиска O(N), где N это количество узлов дерева.</p>
+  <ul>
+    <li>appendChild, insertBefore - O(1)</li>
+    <li>removeChild - O(1)</li>
+    <li>getElementById - O(1)</li>
+    <li>getElementsByClassName - O(N)</li>
+    <li>querySelector/querySelectorAll - O(N)</li>
+  </ul>
+</article>
+
+
